<?xml version="1.0"?>
<package format="2">
  <name>huace_m7xx_ros_driver</name>
  <version>1.0.0</version>
  <description>Huace M7xx Module ROS Driver</description>
  <maintainer email="yunzhao_li@huace.cn">Liyunzhao</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nmea_msgs</build_depend>
  <build_depend>rtcm_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nmea_msgs</build_export_depend>
  <build_export_depend>rtcm_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nmea_msgs</exec_depend>
  <exec_depend>rtcm_msgs</exec_depend>
</package>
