<?xml version="1.0"?>
<package format="2">
  <name>rtcm_msgs</name>
  <version>1.1.6</version>
  <description>ROS 1 RTCM message definitions.</description>
  <maintainer email="tilk@tilk.eu">Marek Materzok</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
